kubernetes/legacy/apps/penpot/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "penpot.k8s.local"
  rules:
    - backendRefs:
        - name: penpot-frontend
          port: 8080
